recaptcha working revision

--- a/index2.html
+++ b/index2.html
@@ -343,7 +343,7 @@
           </div>
 
           <!-- Start Sidebar -->
-          <div class="col-lg-4 sidebar-widgets">
+          <div id="mModalx" class="col-lg-4 sidebar-widgets">
             <div class="widget-wrap">
               <form action="insert.php" method="post">
                 <div class="single-sidebar-widget newsletter-widget">
