--- a/amenities.html
+++ b/amenities.html
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script>
+      function onSubmit(token) {
+          document.getElementById("i-recaptcha").submit();
+        }
+    </script>
 
 
     <style>
@@ -504,65 +510,68 @@
 
     <!--================ Start Footer Area =================-->
     <footer class="footer-area section-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5  col-md-6 col-sm-6 left">
-                    <div class="single-footer-widget">
-                        <h6>About Us</h6>
-                        <p>
-                            Whether you are looking to plan a relaxing weekend getaway with family and friends or attend
-                            a Penn State sporting event, Eagle Creek Lodge is the place for you!
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-4  col-md-6 col-sm-6 center">
-                  <div class="single-footer-widget">
-                    <h6 class="pad-right1">Newsletter</h6>
-                    <p class="pad-right1">Stay up to date with our latest news</p>
-                    <div class="" id="mc_embed_signup">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5  col-md-6 col-sm-6 left">
+            <div class="single-footer-widget">
+              <h6>About Us</h6>
+              <p>
+                Whether you are looking to plan a relaxing weekend getaway with family and friends or attend a Penn State sporting event, Eagle Creek Lodge is the place for you!
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 center">
+            <div class="single-footer-widget">
+              <h6 class="pad-right1">Newsletter</h6>
+              <p class="pad-right1">Stay up to date with our latest news</p>
+              <div class="" id="mc_embed_signup">
 
-                      <form target="_blank" action="insert.php" method="post" class="form-inline">
+                <form target="_blank" action="captcha2.php" method="post" class="form-inline">
 
-                        <div class="d-flex flex-row">
+                  <div class="d-flex flex-row">
 
-                          <input class="form-control" name="email" placeholder="Enter Email" onfocus="this.placeholder = ''"
-                            onblur="this.placeholder = 'Enter Email '" required="" type="email">
+                    <input class="form-control" name="email" placeholder="Enter Email" onfocus="this.placeholder = ''"
+                      onblur="this.placeholder = 'Enter Email '" required="" type="email">
+                    <!-- <div class="captchaWrap">
+                      <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"></div>
+                    </div> -->
+                    <button id="button1" type="submit" value="Submit" class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
+                    <!--<div style="position: absolute; left: -5000px;">
+                      <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                    </div>-->
 
-
-                          <button class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
-                          <!--<div style="position: absolute; left: -5000px;">
-                            <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-                          </div>-->
-
-                        </div>
-                        <div class="info"></div>
-                      </form>
-                    </div>
                   </div>
-                </div>
+                  <div class="captchaWrap">
+                    <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu" data-callback="enableBtn"></div>
+                  </div>
+                  <div class="info"></div>
+                </form>
+              </div>
+            </div>
+          </div>
 
-                <div class="col-lg-3  col-md-6 col-sm-6 right">
-                    <div class="single-footer-widget">
-                        <h6>Follow Us</h6>
-                        <p> </p>
-                        <div class="footer-social right">
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+          <div class="col-lg-3  col-md-6 col-sm-6 right">
+            <div class="single-footer-widget">
+              <h6>Follow Us</h6>
+              <p> </p>
+              <div class="footer-social right">
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </div>
             </div>
-            <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
-                <p class="footer-text m-0">Copyright © 2019 Eagle Creek Lodge</p>
-            </div>
+          </div>
         </div>
+        <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
+          <p class="footer-text m-0">Copyright © 2019 Eagle Creek Lodge</p>
+        </div>
+      </div>
     </footer>
     <!--================ End Footer Area =================-->
 
